--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.1",
+    "dayjs": "1.11.10",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.1.3",
-    "react-router-dom": "6.18.0"
+    "react-router-dom": "6.18.0",
+    "redux-thunk": "2.4.2"
   },
   "devDependencies": {
     "@types/qs": "^6.9.10",
