--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_ENV=development vite",
+    "start": "NODE_ENV=production vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -18,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "8.1.3",
     "react-router-dom": "6.18.0",
-    "redux-thunk": "2.4.2"
+    "redux-thunk": "2.4.2",
+    "sonner": "1.2.4"
   },
   "devDependencies": {
     "@types/qs": "^6.9.10",
