--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.2.1",
+    "@coreui/react": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.1",
     "dayjs": "1.11.10",
