--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.1",
     "dayjs": "1.11.10",
+    "moment": "^2.29.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.10",
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.0.0",
