--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "1.0.6",
     "react-redux": "8.1.3",
     "react-router-dom": "6.18.0",
     "redux-thunk": "2.4.2",
