--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.1",
     "dayjs": "1.11.10",
+    "firebase": "^10.7.1",
     "moment": "^2.29.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
