--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "antd": "^5.11.1",
     "dayjs": "1.11.10",
     "firebase": "^10.7.1",
+    "highcharts": "^11.3.0",
+    "highcharts-react-official": "^3.2.1",
     "moment": "^2.29.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
